# nl2pln_demo

./: README.md  pyproject.toml
NL2PLN/: __main__.py
NL2PLN/metta/: chainer.metta  metta_handler.py
NL2PLN/utils/: common.py  ragclass.py
