[project]
name = "nl2pln-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "hyperon>=0.2.1",
    "ollama>=0.4.4",
    "openai>=1.57.4",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
]
